// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchSidebar /> render matches filtered regions snapshot 1`] = `
<Fragment>
  <styled.div>
    <Component
      canSearch={false}
      fetchHotels={[Function]}
      getCountryName={[Function]}
      getHotel={[Function]}
      indexSelectors={Array []}
      indexes={Array []}
      onChange={[Function]}
      onSearch={[Function]}
      onSubmit={[Function]}
      searchPatterns={Array []}
      searchQuery={
        Object {
          "filters": Object {
            "regions": Object {
              "selected": Array [
                "foo",
              ],
              "type": "specify",
            },
          },
        }
      }
      vertical={true}
    />
  </styled.div>
  <styled.div>
    <Styled(styled.h4)>
      Occasions
    </Styled(styled.h4)>
    <Component
      occasions={
        Array [
          "honeymoon",
          "birthday",
          "anniversary",
          "wedding",
        ]
      }
      onChange={[Function]}
      selected={Array []}
    />
  </styled.div>
  <styled.div>
    <Component
      features={Array []}
      onChange={[Function]}
      onReset={[Function]}
      prices={Array []}
      regions={
        Array [
          "foo",
          "bar",
        ]
      }
      searchQuery={
        Object {
          "filters": Object {
            "regions": Object {
              "selected": Array [
                "foo",
              ],
              "type": "specify",
            },
          },
        }
      }
      starRatings={Array []}
    />
  </styled.div>
  <styled.div>
    <Styled(withThemeProvider(styled.button))
      disabled={true}
      onClick={[Function]}
    >
      Search
    </Styled(withThemeProvider(styled.button))>
  </styled.div>
</Fragment>
`;

exports[`<SearchSidebar /> render matches snapshot 1`] = `
<Fragment>
  <styled.div>
    <Component
      canSearch={false}
      fetchHotels={[Function]}
      getCountryName={[Function]}
      getHotel={[Function]}
      indexSelectors={Array []}
      indexes={Array []}
      onChange={[Function]}
      onSearch={[Function]}
      onSubmit={[Function]}
      searchPatterns={Array []}
      searchQuery={Object {}}
      vertical={true}
    />
  </styled.div>
  <styled.div>
    <Styled(styled.h4)>
      Occasions
    </Styled(styled.h4)>
    <Component
      occasions={
        Array [
          "honeymoon",
          "birthday",
          "anniversary",
          "wedding",
        ]
      }
      onChange={[Function]}
      selected={Array []}
    />
  </styled.div>
  <styled.div>
    <Component
      features={Array []}
      onChange={[Function]}
      onReset={[Function]}
      prices={Array []}
      regions={Array []}
      searchQuery={Object {}}
      starRatings={Array []}
    />
  </styled.div>
  <styled.div>
    <Styled(withThemeProvider(styled.button))
      disabled={true}
      onClick={[Function]}
    >
      Search
    </Styled(withThemeProvider(styled.button))>
  </styled.div>
</Fragment>
`;
